--- a/project/frontend/personal-crm/public/index.html
+++ b/project/frontend/personal-crm/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://apis.google.com/js/api.js" async defer></script>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
